notebooks for milestone 4

--- a/notebooks/milestone3/milestone3.ipynb
+++ b/notebooks/milestone3/milestone3.ipynb
@@ -71,7 +71,7 @@
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')\n"
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -1644,7 +1644,6 @@
     "    \n",
     "    # Calculate the weekly mean\n",
     "    weekly_mean = da_sic_weekly.mean(dim='time')\n",
-    "\n",
     "    weekly_means.append(weekly_mean)\n",
     "\n",
     "print(len(weekly_means))\n",
