--- a/notebooks/milestone4/milestone4b_Polar_Sea_Ice_Prediction_mLSTM.ipynb
+++ b/notebooks/milestone4/milestone4b_Polar_Sea_Ice_Prediction_mLSTM.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "## Objective:\n",
         "\n",
-        "The goal of this notebook is to modify the attention-based Long Short-Term Memory (LSTM) network by adding a new feature—sea ice thickness—for predicting monthly sea ice extent with a 1-month lead time. The original architecture, its reference journal article, and the sea ice thickness data processing can be found in the python notebook, [milestone4/milestone4a.ipynb](milestone4/milestone4a.ipynb). \n",
+        "The goal of this notebook is to modify the attention-based Long Short-Term Memory (LSTM) network by adding a new feature—sea ice thickness—for predicting monthly sea ice extent with a 1-month lead time. The original architecture, its reference journal article, and the sea ice thickness data processing can be found in the python notebook, [milestone4a.ipynb](milestone4a.ipynb). \n",
         "\n",
         "The workflow involves:\n",
         "\n",
@@ -117,7 +117,7 @@
         "## Loading Combined Data 1979-2018\n",
         "\n",
         "* Features: wind_10m, specific_humidity, LW_down, SW_down, rainfall, snowfall, sosaline, sst, t2m, surface_pressure, sea_ice_extent\n",
-        "* Added feature: sit\n"
+        "* __Added feature__: sit (sea ice thickness)\n"
       ]
     },
     {
