--- a/notebooks/milestone4/milestone4a.ipynb
+++ b/notebooks/milestone4/milestone4a.ipynb
@@ -43,14 +43,7 @@
     "import xarray as xr\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "# import matplotlib.pyplot as plt\n",
-    "import datetime\n",
-    "# import pymannkendall as mk\n",
-    "# from scipy.stats import t\n",
-    "# import cartopy.crs as ccrs\n",
-    "# import cartopy.feature as cfeature\n",
-    "# import warnings\n",
-    "# warnings.filterwarnings('ignore')"
+    "import datetime"
    ]
   },
   {
