updated mileston4's notebooks

--- a/notebooks/milestone4/milestone4a.ipynb
+++ b/notebooks/milestone4/milestone4a.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "## Objective\n",
-    "The objective of this notebook is to preprocess sea ice thickness (SIT) data and integrate it with atmospheric and oceanic variables to enhance an attention-based LSTM model for predicting monthly sea ice extent with a 1-month lead time."
+    "The objective of this notebook (a part of milestone 4 of my internship at NOAA PolarWatch) is to preprocess sea ice thickness (SIT) data and integrate it with atmospheric and oceanic variables to enhance an attention-based LSTM model for predicting monthly sea ice extent with a 1-month lead time. For reference, the model being replicated is based on the journal article [here](https://s3.us-east-1.amazonaws.com/climate-change-ai/papers/icml2021/50/paper.pdf), and the full GitHub repository for this project can be found [here](https://github.com/big-data-lab-umbc/sea-ice-prediction/tree/main/climate-change-ai-workshop).\n"
    ]
   },
   {
