--- a/notebooks/milestone4/milestone4b_Polar_Sea_Ice_Prediction_mLSTM.ipynb
+++ b/notebooks/milestone4/milestone4b_Polar_Sea_Ice_Prediction_mLSTM.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "## Objective\n",
         "\n",
-        "The goal of this notebook is to modify the attention-based Long Short-Term Memory (LSTM) network by adding a new feature—sea ice thickness—for predicting monthly sea ice extent with a 1-month lead time. The original architecture, its reference journal article, and the sea ice thickness data processing can be found in the python notebook, [milestone4a.ipynb](milestone4a.ipynb). \n",
+        "The goal of this notebook (part of milestone 4 of my internship at NOAA PolarWatch) is to modify the attention-based Long Short-Term Memory (LSTM) network by adding a new feature—sea ice thickness—for predicting monthly sea ice extent with a 1-month lead time. The original architecture, reference journal article, and preprocessing steps are detailed in the notebook, [milestone4a.ipynb](milestone4a.ipynb).\n",
         "\n",
         "The workflow involves:\n",
         "\n",
